<resources>
    <string name="app_name" translatable="false">Cyclist</string>
    <string name="bt_center_map_description">Center Me</string>
    <string name="facebook_app_id" translatable="false">321492028625905</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb321492028625905</string>
    <string name="main_signin_logo" translatable="false">FIND YOUR WAY</string>
    <string name="sub_signin_logo" translatable="false">CYCLIST WAY</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="connection_details">Connection Details:</string>
    <string name="about_you">About You:</string>
    <string name="birthday">Birthday:</string>
    <string name="select_date">Select Date</string>
    <string name="ride">Ride:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="failed_to_sign_in">Sign in failed</string>
    <string name="register">Register</string>

    <string name="loginCanceled">Login Canceled</string>
    <string name="errorOccurred">Error Occurred</string>
    <string name="startChar" translatable="false">a</string>
    <string name="endChar" translatable="false">z</string>

    <string name="error_sign_in_already_exist">Email is already exist</string>
    <string name="error_sign_in_failed">Authentication failed</string>

    <string-array name="rides">
        <item name="bicycle">Bicycle</item>
        <item name="electric_bicycle">Electric Bicycle</item>
        <item name="electric_scooter">Electric Scooter</item>
        <item name="segway">Segway</item>
    </string-array>

    <string name="search">Search</string>
    <string name="where_are_you_riding_to">Where are you riding to?</string>

    <string name="settings">Settings</string>
    <string name="road_type">Road Type:</string>
    <string name="route_method">Route Method:</string>
    <string name="ride_type">Ride Type:</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="favorites">Favorites</string>
    <string name="no_address">No Address</string>

    <string-array name="road_types">
        <item>Bicycle Trail</item>
        <item>Sidewalk</item>
        <item>Road</item>
    </string-array>

    <string-array name="route_methods">
        <item>Safest</item>
        <item>Fastest</item>
    </string-array>

    <string name="route_length_text">Length:</string>
    <string name="duration_text">Duration:</string>
    <string name="minutes_text">minutes</string>
    <string name="route_title">Route</string>
    <string name="go_text">Go</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="instructionIcon" translatable="false">Instructions Icon</string>
    <string name="destination_text">Is this your destination?</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="deleteAddresQuestion">Would you like to Delete this Address?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="history">History</string>
    <string name="continue_text">Continue</string>
    <string name="choose_your_update">Choose your update:</string>
    <string name="welcome_to_cyclict">Welcome To Cyclist!</string>
    <string name="welcome_message">Please wait while we check your details</string>
    <string name="please_wait">Please wait…</string>
    <string name="added_report">Report Added Successfully</string>
</resources>
