<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.SignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_image"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <TextView
        android:id="@+id/signUp_title"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"/>
    <ScrollView
        android:layout_below="@+id/signUp_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connection_details"
                android:gravity="start|center"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:layout_marginBottom="5dp"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#ffffff"
                android:textColorHint="#919191"
                android:background="@drawable/back"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:lines="1"
                android:focusable="true"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:focusableInTouchMode="true"
                android:gravity="start|center" />
            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:hint="@string/password"
                android:textColor="#ffffff"
                android:textColorHint="#919191"
                android:background="@drawable/back"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:lines="1"
                android:focusable="true"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:focusableInTouchMode="true"
                android:gravity="start|center" />
            <EditText
                android:id="@+id/verifyPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:hint="@string/verify_password"
                android:textColor="#ffffff"
                android:textColorHint="#919191"
                android:background="@drawable/back"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:lines="1"
                android:focusable="true"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:focusableInTouchMode="true"
                android:gravity="start|center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_you"
                android:gravity="start|center"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/firstName"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:hint="@string/first_name"
                android:textColor="#ffffff"
                android:textColorHint="#919191"
                android:background="@drawable/back"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:lines="1"
                android:focusable="true"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:focusableInTouchMode="true"
                android:gravity="start|center" />

            <EditText
                android:id="@+id/lastName"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:hint="@string/last_name"
                android:textColor="#ffffff"
                android:textColorHint="#919191"
                android:background="@drawable/back"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:lines="1"
                android:focusable="true"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:focusableInTouchMode="true"
                android:gravity="start|center" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:gravity="start|center"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/datePickerTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_date"
                android:gravity="center"
                android:textSize="30sp"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:focusable="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ride"
                android:gravity="start|center"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:layout_marginBottom="5dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/rideSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/rides"
                    android:gravity="center"
                    style="@style/Widget.AppCompat.Light.DropDownItem.Spinner"
                    android:imeOptions="actionDone"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/back"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
