<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">
    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/centerLocationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#00ffffff"
        android:contentDescription="@string/bt_center_map_description"
        android:cropToPadding="true"
        android:src="@drawable/ic_center_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />

    <ImageButton
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#00ffffff"
        android:contentDescription="@string/bt_center_map_description"
        android:cropToPadding="true"
        android:src="@drawable/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013" />

    <FrameLayout
        android:id="@+id/searchSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/settingsBackground">

                <ImageButton
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/settingsBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/settings"
                    android:background="@color/settingsBackground"/>

                <TextView
                    android:id="@+id/usernameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignTop="@+id/settingsBtn"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/logoutBtn"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/settingsBackground"
                    android:src="@drawable/logout" />

                <android.support.v7.widget.CardView
                    android:id="@+id/addressCardView"
                    android:layout_below="@id/usernameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp">
                    <fragment
                        android:id="@+id/place_autocomplete_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                        />
                    </android.support.v7.widget.CardView>

            </RelativeLayout>

            <ImageButton
                android:id="@+id/closeSearchBtn"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:src="@drawable/dropdown_btn" />
        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/settingsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/settingsBackground">
        <TextView
            android:id="@+id/topLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/bottom_line"/>

        <ScrollView
            android:layout_below="@id/topLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/roadTypeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/road_type"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"/>
                <RadioGroup
                    android:id="@+id/roadTypes"
                    android:layout_below="@id/roadTypeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp">
                    <!--<RadioButton-->
                        <!--android:id="@+id/bikeTrailButton"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/bicycle_trail"-->
                        <!--android:layout_marginStart="20dp" />-->
                    <!--<RadioButton-->
                        <!--android:id="@+id/sidewalkButton"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/sidewalk"-->
                        <!--android:layout_marginStart="20dp" />-->
                    <!--<RadioButton-->
                        <!--android:id="@+id/roadButton"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/road"-->
                        <!--android:layout_marginStart="20dp" />-->
                </RadioGroup>

                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_below="@+id/roadTypes"
                    android:id="@+id/routeMethodText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/route_method"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginTop="10dp"/>
                <RadioGroup
                    android:id="@+id/routeMethods"
                    android:layout_below="@id/routeMethodText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp">
                    <!--<RadioButton-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/safest"-->
                        <!--android:layout_marginStart="20dp" />-->
                    <!--<RadioButton-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/fastest"-->
                        <!--android:layout_marginStart="20dp" />-->
                </RadioGroup>
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_below="@+id/routeMethods"
                    android:id="@+id/rideTypeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/ride_type"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginTop="10dp"/>
                <RadioGroup
                    android:id="@+id/ridesTypes"
                    android:layout_below="@id/rideTypeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp">
                </RadioGroup>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>